--- a/.github/workflows/build-base-img.yaml
+++ b/.github/workflows/build-base-img.yaml
@@ -10,7 +10,7 @@ on:
 
 env:
   BASE_BRANCH: "main"       # source code branch for pipeline
-  TAG_ADDR: "armyost/baseRunner:1.0"
+  TAG_ADDR: "armyost/baserunner:1.0"
 
 permissions:
   contents: read
